[gd_scene load_steps=8 format=3 uid="uid://bn204mt4pwb7i"]

[ext_resource type="Theme" uid="uid://b6c0jw385qavt" path="res://Battle Scene/Menu Assets/Text.tres" id="1_vik6a"]
[ext_resource type="Texture2D" uid="uid://iyk3i5cxhxt2" path="res://Battle Scene/Oni_1.png" id="2_dr7g3"]
[ext_resource type="Script" uid="uid://irsxyldl17vp" path="res://Battle Scene/Enemies/enemy_button.gd" id="2_mttqm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_65qj1"]
atlas = ExtResource("2_dr7g3")
region = Rect2(12, 31, 33, 30)

[sub_resource type="Animation" id="Animation_dr7g3"]
resource_name = "Highlight"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.470588)]
}

[sub_resource type="Animation" id="Animation_65qj1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nycty"]
_data = {
&"Highlight": SubResource("Animation_dr7g3"),
&"RESET": SubResource("Animation_65qj1")
}

[node name="EnemyButton" type="TextureButton"]
clip_contents = true
custom_minimum_size = Vector2(32, 32)
offset_right = 33.0
offset_bottom = 32.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource("1_vik6a")
texture_normal = SubResource("AtlasTexture_65qj1")
stretch_mode = 3
script = ExtResource("2_mttqm")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nycty")
}

[node name="Health" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -8.0
offset_right = 42.0
grow_vertical = 0
text = "HP"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
